--- a/index.html
+++ b/index.html
@@ -2,27 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Complete Trip Explorer</title>
+  <title>Complete Trip Explorer · NovaMobility Lab</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body>
-  <div class="container">
-    <h1>Complete Trip Explorer</h1>
+  <div class="landing-container">
+
+    <!-- Title -->
+    <h1 class="lab-title">
+      <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab
+    </h1>
+
+    <h2 class="project-title">
+      Complete Trip Explorer
+    </h2>
+
     <p class="subtitle">
-      Interactive exploration of complete trips, linked trips,
-      and multimodal travel behavior.
+      Interactive exploration of complete trips, linked trips,  
+      and multimodal travel behavior
     </p>
 
-    <p>
-      This demo illustrates how origin–destination flows can be connected
-      to real, linked, door-to-door trips.
+    <hr class="divider">
+
+    <p class="description">
+      This interactive explorer demonstrates how origin–destination flows
+      connect to real, door-to-door trips reconstructed from location-based
+      mobility data. The tool is designed for agency outreach and research
+      communication at venues such as AGU and TRB.
     </p>
 
-    <a class="button" href="explorer.html">Launch Explorer</a>
+    <a class="primary-btn" href="explorer.html">
+      ▶ Launch Explorer
+    </a>
 
-    <footer>
+    <footer class="landing-footer">
       Developed by Ruohan Li · NovaMobility Lab · Villanova University
     </footer>
+
   </div>
 </body>
 </html>
