--- a/explorer.html
+++ b/explorer.html
@@ -23,16 +23,18 @@
 
   <!-- Center: Dashboard title -->
   <div class="center-group">
-    <div class="main-title">Complete Trip Explorer</div>
-    <div class="sub-title">
-      NovaMobility Lab · Villanova University
-    </div>
+    <div class="main-title">Complete Trip Data Explorer</div>
   </div>
 
-  <!-- Right: Villanova mark (text or image) -->
+  <!-- Right: Villanova mark -->
   <div class="right-group">
-    <span class="villanova-mark">VILLANOVA</span>
+    <img 
+      src="img/Villanova_V_logo.jpg" 
+      alt="Villanova University" 
+      class="villanova-logo"
+    >
   </div>
+
 
 </header>
 
