--- a/explorer.html
+++ b/explorer.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Complete Trip Explorer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Complete Trip Data Explorer</title>
+
   <link rel="stylesheet" href="assets/css/style.css" />
   <link
     rel="stylesheet"
@@ -11,48 +13,201 @@
 </head>
 
 <body>
-
-<header class="top-bar">
-
-  <!-- Left: NovaMobility wordmark -->
-  <div class="left-group">
-    <div class="lab-wordmark">
-      <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab
+  <!-- Top Bar (Villanova blue + NovaMobility wordmark + Villanova V) -->
+  <header class="top-bar">
+    <div class="left-group">
+      <div class="lab-wordmark">
+        <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab
+      </div>
     </div>
-  </div>
 
-  <!-- Center: Dashboard title -->
-  <div class="center-group">
-    <div class="main-title">Complete Trip Data Explorer</div>
-  </div>
-
-  <!-- Right: Villanova mark -->
-  <div class="right-group">
-    <img 
-      src="img/Villanova_V_logo.jpg" 
-      alt="Villanova University" 
-      class="villanova-logo"
-    >
-  </div>
-
-</header>
-
-
-
-<div id="layout">
-  <div id="sidebar">
-    <div class="info-card">
-      <h3>Trip Information</h3>
-      <div id="tripInfo">Select a trip to view details.</div>
+    <div class="center-group">
+      <div class="main-title">Complete Trip Data Explorer</div>
+      <div class="sub-title">OD · Access/Egress · Linked Trips · UTA Layers · TDI</div>
     </div>
+
+    <div class="right-group">
+      <img
+        src="img/Villanova_V_logo.jpg"
+        alt="Villanova University"
+        class="villanova-logo"
+      >
+    </div>
+  </header>
+
+  <div id="layout">
+    <!-- Sidebar -->
+    <aside id="sidebar">
+      <div class="card">
+        <h3>Filters</h3>
+
+        <div class="form-row">
+          <label>Month</label>
+          <select id="monthSelect"></select>
+        </div>
+
+        <div class="form-row">
+          <label>Mode</label>
+          <select id="modeSelect">
+            <option value="ALL">All</option>
+            <option value="TRANSIT">Transit</option>
+            <option value="AUTO">Auto</option>
+            <option value="WALK">Walk</option>
+          </select>
+        </div>
+
+        <div class="form-row">
+          <label>OD Pair</label>
+          <select id="odSelect"></select>
+        </div>
+
+        <div class="form-row inline">
+          <label class="checkbox">
+            <input id="linkedOnly" type="checkbox" />
+            Linked trips only
+          </label>
+        </div>
+
+        <div class="hint">
+          Sample data for UI scaffolding. Replace with real data later.
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Tabs</h3>
+        <div class="tab-bar">
+          <button class="tab-btn active" data-tab="tabTrips">Trips</button>
+          <button class="tab-btn" data-tab="tabLayers">UTA Layers</button>
+          <button class="tab-btn" data-tab="tabCompare">Compare</button>
+          <button class="tab-btn" data-tab="tabTDI">TDI</button>
+        </div>
+      </div>
+
+      <!-- Trips tab -->
+      <div id="tabTrips" class="tab-panel active">
+        <div class="card">
+          <h3>OD Summary</h3>
+          <div id="odSummary" class="kv"></div>
+        </div>
+
+        <div class="card">
+          <h3>Trip Samples</h3>
+          <div class="small">Click a trip to render full path + access/egress on the map.</div>
+          <div id="tripList" class="list"></div>
+        </div>
+      </div>
+
+      <!-- Layers tab -->
+      <div id="tabLayers" class="tab-panel">
+        <div class="card">
+          <h3>UTA Overlay</h3>
+
+          <label class="checkbox">
+            <input type="checkbox" id="toggleBusStops" checked />
+            Bus stops
+          </label>
+
+          <label class="checkbox">
+            <input type="checkbox" id="toggleRailStops" checked />
+            Rail stations
+          </label>
+
+          <label class="checkbox">
+            <input type="checkbox" id="toggleBusRoutes" />
+            Bus routes (sample)
+          </label>
+
+          <label class="checkbox">
+            <input type="checkbox" id="toggleRailRoutes" />
+            Rail routes (sample)
+          </label>
+
+          <div class="hint">
+            These are sample geometries for the framework. Replace with UTA GTFS/shape exports later.
+          </div>
+        </div>
+      </div>
+
+      <!-- Compare tab -->
+      <div id="tabCompare" class="tab-panel">
+        <div class="card">
+          <h3>Comparisons</h3>
+          <div class="small">
+            Framework for: Our data vs USDOT, and our data vs UTA.
+          </div>
+
+          <div class="form-row">
+            <label>Comparison type</label>
+            <select id="compareSelect">
+              <option value="USDOT">Our vs USDOT (sample)</option>
+              <option value="UTA">Our vs UTA (sample)</option>
+            </select>
+          </div>
+
+          <div id="compareTable" class="table"></div>
+
+          <div class="hint">
+            Replace the sample metrics with real aggregation outputs (trip counts, mode share, access distance, etc.).
+          </div>
+        </div>
+      </div>
+
+      <!-- TDI tab -->
+      <div id="tabTDI" class="tab-panel">
+        <div class="card">
+          <h3>TDI View</h3>
+
+          <div class="form-row">
+            <label>Temporal scale</label>
+            <select id="tdiScale">
+              <option value="MONTHLY">Monthly</option>
+              <option value="ANNUAL">Annual</option>
+            </select>
+          </div>
+
+          <div class="form-row">
+            <label>Year</label>
+            <select id="tdiYear"></select>
+          </div>
+
+          <div class="form-row" id="tdiMonthRow">
+            <label>Month</label>
+            <select id="tdiMonth"></select>
+          </div>
+
+          <label class="checkbox">
+            <input type="checkbox" id="toggleTDI" checked />
+            Show Transit Desert (choropleth)
+          </label>
+
+          <div class="legend">
+            <div class="legend-title">TDI (sample)</div>
+            <div class="legend-row"><span class="swatch s1"></span> Low</div>
+            <div class="legend-row"><span class="swatch s2"></span> Mid</div>
+            <div class="legend-row"><span class="swatch s3"></span> High (Desert)</div>
+          </div>
+
+          <div class="hint">
+            TDI here is a placeholder choropleth per zone. Swap in your real zone polygons + TDI values.
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <!-- Map -->
+    <main id="map-wrap">
+      <div id="map"></div>
+
+      <div id="mapStatus" class="map-status">
+        Ready · Sample data loaded
+      </div>
+    </main>
   </div>
 
-  <div id="map"></div>
-</div>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="assets/js/data.js"></script>
-<script src="assets/js/map.js"></script>
-
+  <!-- Sample data + app -->
+  <script src="assets/js/data.sample.js"></script>
+  <script src="assets/js/app.js"></script>
 </body>
 </html>
