--- a/explorer.html
+++ b/explorer.html
@@ -15,6 +15,22 @@
 <body>
   <!-- Top Bar (Villanova blue + NovaMobility wordmark + Villanova V) -->
   <header class="top-bar">
+    <!-- View Selector -->
+    <div class="view-selector">
+      <button class="view-btn active" data-view="trips">
+        Complete Trips
+      </button>
+      <button class="view-btn" data-view="od">
+        OD Patterns
+      </button>
+      <button class="view-btn" data-view="access">
+        Access &amp; Egress
+      </button>
+      <button class="view-btn" data-view="tdi">
+        Transit Desert (TDI)
+      </button>
+    </div>
+
     <div class="left-group">
       <div class="lab-wordmark">
         <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab
