--- a/explorer.html
+++ b/explorer.html
@@ -52,9 +52,10 @@
       <!-- ===== TOP: View Selector ===== -->
       <div class="sidebar-top">
         <div class="view-grid">
-          <button class="view-pill active">Complete Trip</button>
+          <button class="view-pill active">Samples</button>
           <button class="view-pill">OD</button>
           <button class="view-pill">Access</button>
+          <button class="view-pill">Egress</button>
           <button class="view-pill">Network</button>
           <button class="view-pill">Speed</button>
         </div>
