--- a/explorer.html
+++ b/explorer.html
@@ -82,7 +82,17 @@
             <label><input type="checkbox" checked> Car</label>
             <label><input type="checkbox" checked> Bus</label>
             <label><input type="checkbox" checked> Rail</label>
-            <label><input type="checkbox" checked> Walk / Bike</label>
+            <label><input type="checkbox" checked> Walk/Bike</label>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <label>Facilities</label>
+          <div class="facility-list">
+            <label><input type="checkbox" checked> Bus Stop</label>
+            <label><input type="checkbox" checked> Bus Route</label>
+            <label><input type="checkbox" checked> Rail Stop</label>
+            <label><input type="checkbox" checked> Rail Route</label>
           </div>
         </div>
 
