--- a/explorer.html
+++ b/explorer.html
@@ -110,15 +110,24 @@
             </label>
           </div>
 
-        <div class="form-row">
-          <label>Facilities</label>
-          <div class="facility-list">
-            <label><input type="checkbox" checked> Bus Stop</label>
-            <label><input type="checkbox" checked> Bus Route</label>
-            <label><input type="checkbox" checked> Rail Stop</label>
-            <label><input type="checkbox" checked> Rail Route</label>
+          <div class="facility-list mode-list">
+            <label class="check-item">
+              <input type="checkbox" checked>
+              <span>Bus Stop</span>
+            </label>
+            <label class="check-item">
+              <input type="checkbox" checked>
+              <span>Bus Route</span>
+            </label>
+            <label class="check-item">
+              <input type="checkbox" checked>
+              <span>Rail Stop</span>
+            </label>
+            <label class="check-item">
+              <input type="checkbox" checked>
+              <span>Rail Route</span>
+            </label>
           </div>
-        </div>
 
       </div>
     </aside>
