--- a/explorer.html
+++ b/explorer.html
@@ -52,18 +52,15 @@
       <!-- ===== TOP: View Selector ===== -->
       <div class="sidebar-top">
         <div class="view-grid">
-          <button class="view-pill active" data-view="samples">Samples</button>
-          <button class="view-pill" data-view="od">OD</button>
-          <button class="view-pill" data-view="access">Access</button>
-          <button class="view-pill" data-view="egress">Egress</button>
-          <button class="view-pill" data-view="network">Network</button>
-          <button class="view-pill" data-view="speed">Speed</button>
+          <button class="view-pill active">Samples</button>
+          <button class="view-pill">OD</button>
+          <button class="view-pill">Access</button>
+          <button class="view-pill">Egress</button>
+          <button class="view-pill">Network</button>
+          <button class="view-pill">Speed</button>
         </div>
       </div>
-      <!-- ===== Samples Panel ===== -->
-      <div id="samples-panel" class="panel active">
-        <div id="sampleList" class="sample-list"></div>
-      </div>
+
       <!-- ===== BOTTOM: Filters ===== -->
       <div class="sidebar-bottom">
 
@@ -116,19 +113,19 @@
           <label>Facilities</label>
           <div class="facility-list">
             <label class="check-item">
-              <input type="checkbox" data-layer="bus_stop" >
+              <input type="checkbox" data-layer="bus_stop" checked>
               Bus Stop
             </label>
             <label class="check-item">
-              <input type="checkbox" data-layer="bus_route" >
+              <input type="checkbox" data-layer="bus_route" checked>
               Bus Route
             </label>
             <label class="check-item">
-              <input type="checkbox" data-layer="rail_stop" >
+              <input type="checkbox" data-layer="rail_stop" checked>
               Rail Stop
             </label>
             <label class="check-item">
-              <input type="checkbox" data-layer="rail_route" >
+              <input type="checkbox" data-layer="rail_route" checked>
               Rail Route
             </label>
           </div>
