--- a/explorer.html
+++ b/explorer.html
@@ -18,12 +18,8 @@
 
     <div class="left-group">
       <div class="lab-wordmark">
-        <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab
+        <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab | Complete Trip Data
       </div>
-    </div>
-
-    <div class="center-group">
-      <div class="main-title">Complete Trip Data Explorer</div>
     </div>
 
     <div class="right-group">
@@ -34,16 +30,6 @@
       >
     </div>
 </header>
-
-  <!-- View Selector -->
-  <div class="view-selector">
-    <button class="view-btn active" data-view="complete">
-      Complete Trip
-    </button>
-    <button class="view-btn" data-view="applications">
-      Applications
-    </button>
-  </div>
   
   <div id="layout">
     <!-- Sidebar -->
@@ -53,11 +39,12 @@
       <div class="sidebar-top">
         <div class="view-grid">
           <button class="view-pill active" data-view="samples">Samples</button>
-          <button class="view-pill">OD</button>
+          <button class="view-pill active" data-view="od">OD</button>
           <button class="view-pill">Access</button>
           <button class="view-pill">Egress</button>
           <button class="view-pill">Network</button>
           <button class="view-pill">Speed</button>
+          <button class="view-pill">Application</button>
         </div>
       </div>
 
