--- a/explorer.html
+++ b/explorer.html
@@ -18,7 +18,11 @@
 
     <div class="left-group">
       <div class="lab-wordmark">
-        <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab | Complete Trip Data
+        <span class="brand">
+          <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab
+        </span>
+        <span class="sep">|</span>
+        <span class="page-title">Complete Trip Data</span>
       </div>
     </div>
 
