--- a/explorer.html
+++ b/explorer.html
@@ -43,7 +43,7 @@
       <div class="sidebar-top">
         <div class="view-grid">
           <button class="view-pill active" data-view="samples">Samples</button>
-          <button class="view-pill active" data-view="od">OD</button>
+          <button class="view-pill" data-view="od">OD</button>
           <button class="view-pill">Access</button>
           <button class="view-pill">Egress</button>
           <button class="view-pill">Network</button>
