--- a/explorer.html
+++ b/explorer.html
@@ -22,7 +22,13 @@
           <span class="nova">Nova</span><span class="mobility">Mobility</span> Lab
         </span>
         <span class="sep">|</span>
-        <span class="page-title">Complete Trip Data</span>
+
+        <div class="title-block">
+          <span class="page-title">Salt Lake City Complete Trip Data</span>
+          <span class="page-subtitle">
+            Demo Version · Salt Lake City Metropolitan Area — 2002 Data
+          </span>
+        </div>
       </div>
     </div>
 
