--- a/explorer.html
+++ b/explorer.html
@@ -26,7 +26,7 @@
         <div class="title-block">
           <span class="page-title">Salt Lake City Complete Trip Data</span>
           <span class="page-subtitle">
-            Demo Version · Salt Lake City Metropolitan Area — 2002 Data
+            (Demo · Salt Lake City Metropolitan Area, 2002)
           </span>
         </div>
       </div>
