--- a/explorer.html
+++ b/explorer.html
@@ -26,7 +26,7 @@
         <div class="title-block">
           <span class="page-title">Salt Lake City Complete Trip Data</span>
           <span class="page-subtitle">
-            (Demo · Salt Lake City Metropolitan Area, 2002)
+            (Demo Version · Salt Lake City Metropolitan Area)
           </span>
         </div>
       </div>
