--- a/explorer.html
+++ b/explorer.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div id="app-shell"></div>
+  <div id="app-shell">
     <!-- Top Bar (Villanova blue + NovaMobility wordmark + Villanova V) -->
     <header class="top-bar">
 
@@ -165,7 +165,7 @@
       </main> 
     </div>
   </div>
-  
+
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <script src="assets/js/app.js"></script>
