--- a/explorer.html
+++ b/explorer.html
@@ -128,35 +128,36 @@
       <!-- ===== Map ===== -->
       <main id="map-wrap">
         <div id="map"></div>
-        <div id="mapStatus" class="map-status">
-          <div id="mapLegend" class="map-legend">
-            <div class="legend-title">Legend</div>
+        <div id="mapLegend" class="map-legend">
+          <div class="legend-title">Legend</div>
 
-            <div class="legend-row">
-              <span class="swatch line car"></span> Car
-            </div>
-            <div class="legend-row">
-              <span class="swatch line bus"></span> Bus
-            </div>
-            <div class="legend-row">
-              <span class="swatch line rail"></span> Rail
-            </div>
-            <div class="legend-row">
-              <span class="swatch line walk"></span> Walk / Bike
-            </div>
-
-            <hr>
-
-            <div class="legend-row">
-              <span class="dot origin"></span> Origin
-            </div>
-            <div class="legend-row">
-              <span class="dot destination"></span> Destination
-            </div>
-            <div class="legend-row">
-              <span class="dot transfer"></span> Transfer
-            </div>
+          <div class="legend-row">
+            <span class="swatch line car"></span> Car
           </div>
+          <div class="legend-row">
+            <span class="swatch line bus"></span> Bus
+          </div>
+          <div class="legend-row">
+            <span class="swatch line rail"></span> Rail
+          </div>
+          <div class="legend-row">
+            <span class="swatch line walk"></span> Walk / Bike
+          </div>
+
+          <hr>
+
+          <div class="legend-row">
+            <span class="dot origin"></span> Origin
+          </div>
+          <div class="legend-row">
+            <span class="dot destination"></span> Destination
+          </div>
+          <div class="legend-row">
+            <span class="dot transfer"></span> Transfer
+          </div>
+        </div>
+        <div id="mapStatus" class="map-status">
+          Ready · Sample data loaded
 
         </div>
       </main>
