--- a/explorer.html
+++ b/explorer.html
@@ -72,19 +72,18 @@
             </select>
           </div>
 
-          <div class="form-row">
-            <label>Origin Census Tract</label>
-            <select id="originTract">
-              <option value="">49035114000 (Downtown)</option>
-            </select>
-          </div>
+          <select id="Origin Tract">
+            <option value="">-- Select Origin --</option>
+            <option value="49035114000">49035114000 (Downtown)</option>
+            <option value="49035110106">49035110106 (Ski)</option>
+          </select>
 
-          <div class="form-row">
-            <label>Destination Census Tract</label>
-            <select id="destinationTract">
-              <option value="">49035980000 (Airport)</option>
-            </select>
-          </div>
+          <select id="Destination Tract">
+            <option value="">-- Select Destination --</option>
+            <option value="49035980000">49035980000 (Airport)</option>
+            <option value="49057201900">49057201900 (Weber)</option>
+          </select>
+
 
           <div class="form-row">
             <label>Mode</label>
