--- a/explorer.html
+++ b/explorer.html
@@ -93,7 +93,7 @@
           </div>
 
 
-          <div class="form-row">
+          <!-- <div class="form-row">
             <label>Mode</label>
             <div class="mode-list">
               <label class="check-item"><input type="checkbox" checked> Car</label>
@@ -101,7 +101,7 @@
               <label class="check-item"><input type="checkbox" checked> Rail</label>
               <label class="check-item"><input type="checkbox" checked> Walk / Bike</label>
             </div>
-          </div>
+          </div> -->
 
           <div class="form-row">
             <label>Facilities</label>
