--- a/explorer.html
+++ b/explorer.html
@@ -135,6 +135,16 @@
       <!-- ===== Map ===== -->
       <main id="map-wrap">
         <div id="map"></div>
+
+        <div id="statsPanel" class="stats-panel">
+          <div class="stats-title">OD Trip Summary (2020)</div>
+
+          <div class="stats-row" id="statsTrips"></div>
+          <div class="stats-row" id="statsDuration"></div>
+          <div class="stats-row" id="statsTransfers"></div>
+          <div class="stats-row" id="statsModes"></div>
+        </div>
+
         <div id="mapLegend" class="map-legend">
           <div class="legend-title">Legend</div>
 
@@ -163,6 +173,7 @@
             <span class="dot transfer"></span> Transfer
           </div>
         </div>
+
         <div id="mapStatus" class="map-status">
           Ready · Sample data loaded
 
