--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </h1>
 
     <h2 class="project-title">
-      Complete Trip Explorer
+      Salt Lake City Complete Trip Explorer
     </h2>
 
     <p class="subtitle">
