--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
 
 
     <footer class="landing-footer">
-      Developed by Ruohan Li · NovaMobility Lab · Villanova University
+      Developed by
+      <a href="https://ruohanlixyf.github.io/" target="_blank">
+        Ruohan Li
+      </a>
+      · NovaMobility Lab · Villanova University
     </footer>
+
 
 
   </div>
