--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </a>
 
     <div class="pi-block">
-      <div class="pi-title">Lab Principal Investigator</div>
+      <div class="pi-title">Lab PI</div>
       <div class="pi-name">Chenfeng Xiong, Ph.D.</div>
       <div class="pi-contact">
         <div>
