--- a/explorer.html
+++ b/explorer.html
@@ -161,7 +161,7 @@
         <div id="map"></div>
 
         <div id="statsPanel" class="stats-panel">
-          <div class="stats-title">OD Trip Summary (2020)</div>
+          <div class="stats-title">OD Trip Summary (Jan.2020)</div>
 
           <div class="stats-row" id="statsTrips"></div>
           <div class="stats-row" id="statsDuration"></div>
