--- a/explorer.html
+++ b/explorer.html
@@ -92,7 +92,7 @@
             <select id="originTract">
               <option value="49035980000">49035980000 (Airport)</option>
               <option value="49035114000">49035114000 (Downtown)</option>
-              <option value="49035110106">49035110106 (Ski)</option>
+              <option value="49035110106">49035110106 (Canyon)</option>
               <option value="49035101402">49035101402 (U of U)</option>
             </select>
           </div>
@@ -100,7 +100,7 @@
           <div class="form-row">
             <label>Destination Census Tract</label>
             <select id="destinationTract">
-              <option value="49035110106">49035110106 (Ski)</option>
+              <option value="49035110106">49035110106 (Canyon)</option>
               <option value="49035114000">49035114000 (Downtown)</option>
               <option value="49035980000">49035980000 (Airport)</option>
               <option value="49035101402">49035101402 (U of U)</option>
